update js links

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			<a href="#" class="important <% print(important? 'active': null)%>">!</a>
 			<a href="#" class="delete-link">&#10008;</a>
 		</script>
-		<script src="js/jquery.min.js"></script>
+		<script src="https://raw.github.com/mohsen1/Simple-Backbone-TODO/gh-pages/js/jquery.min.js"></script>
 		<script src="https://raw.github.com/mohsen1/Simple-Backbone-TODO/gh-pages/js/Underscore.js"></script>
-		<script src="https://raw.github.com/mohsen1/Simple-Backbone-TODO/gh-pages/js/backbone-min.js"></script>
+		<script src="https://raw.github.com/mohsen1/Simple-Backbone-TODO/gh-pages/js/underscore.js"></script>
 		<script src="app.js"></script>
 </body>
 </html>
