--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 			<a href="#" class="delete-link">&#10008;</a>
 		</script>
 		<script src="https://raw.github.com/mohsen1/Simple-Backbone-TODO/gh-pages/js/jquery.min.js"></script>
-		<script src="https://raw.github.com/mohsen1/Simple-Backbone-TODO/gh-pages/js/Underscore.js"></script>
 		<script src="https://raw.github.com/mohsen1/Simple-Backbone-TODO/gh-pages/js/underscore.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/mohsen1/Simple-Backbone-TODO/gh-pages/js/backbone-min.js"></script>
 		<script src="app.js"></script>
 </body>
 </html>
